# AdventOfCode

./: .gitignore  aoc.cabal  flake.nix  hie.yaml
2024/: simple-haskell-project.cabal
2024/src/: Main.hs
app/: Main.hs
src/: AOC.hs
src/AOC/: Day01.hs
