cabal-version:   2.4
name:            aoc
version:         0
tested-with:     GHC ==9.4.8
description:     My aadvent of code solution
author:          Harrison Centner 
maintainer:      Harrison Centner (Harrisoncent@proton.me)
copyright:       2024-12-09 harrisoncentner
build-type:      Simple
extra-doc-files: 
                 README.md
license:         NONE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  
  default-extensions: ApplicativeDo
                      BlockArguments
                      DerivingStrategies
                      EmptyCase
                      LambdaCase
                      PartialTypeSignatures
                      PatternGuards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-partial-type-signatures
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

library
  import:              common-options
  exposed-modules:
      AOC
      AOC.Day01

  build-depends: unordered-containers

  hs-source-dirs:
      src

executable aoc-exe
  import:         common-options
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  build-depends: aoc

  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
